fixed a few styling issues on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,6 +44,10 @@ a:hover {
   text-align: center;
 }
 
+.header-text {
+  font-size: 1.25rem;
+}
+
 .title-bar {
   border-radius: 12px;
   background-color: var(--dark-gray);
@@ -56,7 +60,8 @@ a:hover {
 }
 
 .nav-bar a, .nav-bar .btn {
-  margin:0 18px 0 16px;
+  margin:0 30px 0 25px;
+  text-align: center;
   padding:0;
 }
 
